fix spacing for word length

--- a/src/styles/Splash.scss
+++ b/src/styles/Splash.scss
@@ -9,7 +9,7 @@
     &__container {
         height: inherit;
         margin-top: 116px;
-        margin-left: 80px;
+        margin-left: 40px;
 
         @include for-mobile {
             margin: 0 20px;
